added js for populating, created event listener, still working on how to show the information

--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@ body {
 }
 .container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     min-height: 100vh;
     color: aliceblue;
 }
-#card{
+.card{
     width: 300px;
     height: 375px;
     border-radius: 10px;
