--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
 }
 body {
     background-color: #030f1a;
+    min-height: 100vh;
+}
+.header{
+    margin: 5px;
+    padding: 10px;
+    color: aliceblue;
+    display: flex;
+    justify-content: center;
+    
 }
 .container{
     display: flex;
@@ -12,15 +21,15 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    min-height: 100vh;
     color: aliceblue;
+    padding: 10px  ;
 }
 .display{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    min-height: 100vh;
     margin: 25px;
     padding: 10px;
     color: aliceblue;
@@ -28,6 +37,7 @@ body {
 .card{
     width: 300px;
     height: 375px;
+    margin: 1rem;
     border-radius: 10px;
     overflow: hidden;
     background-color:#192a56 ;  
